--- a/templates/post_edit.html
+++ b/templates/post_edit.html
@@ -20,6 +20,21 @@
       <textarea class="form-control" name="post-content" rows="10" cols="50">{{ post.content }}</textarea>
     </div>
     
+    <div class="mb-3">
+      <p id="tags-label">Tags</p>
+      {% for tag in tags %}
+        <div class="form-check">
+          {% if tag in post.tags %}
+            <input class="form-check-input" name="post-tag" value="{{ tag.name }}" type="checkbox" checked>
+            <label class="form-check-label" for="post-tag">{{ tag.name }}</label>
+          {% else %}
+          <input class="form-check-input" name="post-tag" value="{{ tag.name }}" type="checkbox">
+          <label class="form-check-label" for="post-tag">{{ tag.name }}</label>
+          {% endif %}
+        </div>
+      {% endfor %}
+    </div>
+    
     <a href="/"><button class="btn btn-secondary">Cancel</button></a>
     <a href="/"><button type="submit" class="btn btn-primary">Save</button></a>
     
